--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+tmp
 
 # Test binary, built with `go test -c`
 *.test
@@ -23,4 +24,5 @@ go.work
 go.work.sum
 
 # env file
-.env
+configs/*.yaml
+!configs/example-env.yaml
