--- a/configs/example-env.yaml
+++ b/configs/example-env.yaml
@@ -1,2 +1,9 @@
 SERVER_CONFIG:
   PORT: 8080
+logger_config:
+  log_level: debug
+  file_name: "./logs/dev.001.log"
+  max_size: 500
+  max_backups: 3
+  max_age: 28
+  compress: true
